Modulo de publicaciones terminado, correcciones realizadas, estructura cambiada
